components:celebrities: classnames refactor to avoid overlapping with other classes

--- a/src/components/molecules/celebrities-list/celebrities-list.scss
+++ b/src/components/molecules/celebrities-list/celebrities-list.scss
@@ -1,10 +1,9 @@
 @use '../../../assets/styles/variables' as v;
 @use '../../../assets/styles/utils' as u;
 
-.celebs {
-  &-list {
+.celebrities {
+  &__list {
     display: flex;
-    transform: translateX(-245px);
     z-index: 8;
     position: relative;
     margin-bottom: 50px;
@@ -13,18 +12,11 @@
       width: 227px;
     }
   }
-
-  > p {
-    margin-top: 30px;
-    margin-bottom: 25px;
-  }
 }
 
 @media screen and (max-width: 1050px) {
-  .celebs {
-    &-list {
-      transform: translateX(0);
-
+  .celebrities {
+    &__list {
       .swiper-slide:not(.swiper-slide-active) {
         opacity: 0.3;
         user-select: none;
